--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Interior Design Server",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "render-start": "node server.js"
   },
-  "keywords": [],
+  "keywords": ["interior", "design", "api"],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,7 +17,12 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.3",
+    "mysql2": "^3.15.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
